k8s_minikube/chat_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-api-deployment
  labels:
    app: chat-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chat-api
  template:
    metadata:
      labels:
        app: chat-api
    spec:
      containers:
        - name: chat-api
          image: s7efan/chat-api:latest
          ports:
            - containerPort: 8084
              name: http
            - containerPort: 2112
              name: metrics
