k8s_minikube/user_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-api
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: metrics
      port: 2112
      targetPort: 2112
  type: ClusterIP
